replace > jdk-1.8 java list literal constructors